# iperocks-croqui-ui

./: app.py  main.py  pyproject.toml
iperocks_croqui_ui/: collect_json.py  export_pdf.py  pdf_converter.py
output/: consolidated_routes.json
output/Croqui_Iperocks_v4-3/: page_100.txt  page_101.json  page_101.txt  page_102.json  page_102.txt  page_103.txt  page_104.json  page_104.txt  page_105.json  page_105.txt  page_106.json  page_106.txt  page_107.json  page_107.txt  page_108.json  page_108.txt  page_109.json  page_109.txt  page_110.txt  page_111.json  page_111.txt  page_112.json  page_112.txt  page_113.txt  page_114.json  page_114.txt  page_115.txt  page_116.txt  page_117.json  page_117.txt  page_118.txt  page_119.json  page_119.txt  page_120.json  page_120.txt  page_121.json  page_121.txt  page_122.json  page_122.txt  page_123.json  (+230 more)
tests/: read_pdf.py
